# XPertoPublic

./: .env.example  .gitignore  README.md  pyproject.toml
src/xperto/: config.py  runner.py  test_audio.py
src/xperto/bots/: bot.py  natural_conv_bot.py  smart_turn_bot.py
src/xperto/configs/: connectival.yaml  default.yaml  experto-en.yaml
src/xperto/prompts/: Alex.md  Datenschutz_Experto_DE.md  Experto_DE.md  Experto_EN.md  connectival_DE.md  connectival_intro_DE.md  intro_DE.md  intro_EN.md
src/xperto/utils/: audiobuffer_handler.py  context_manager.py  context_saver.py  function_calling.py  select_audio_device.py  transcript_handler.py  wake_check_buffer.py
